# SPOC

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  README_version1.md  cmd.h  compress.h  convert_all.sh  convert_laz_one.sh  convert_one.sh  convert_spc_all.sh  convert_spoc_all.sh  convert_spoc_one.sh  convert_text_all.sh  convert_text_one.sh  datasets  extent.h  gpc.h  gpc2text.cpp  gpc2text_cmd.h  las2spoc.cpp  las2spoc_cmd.h  octree.h  point.h  point3d.h  results  spc.h  spc2text.cpp  spc2text_cmd.h  spoc.h  spoc2text.cpp  spoc2text_cmd.h  test_compress.cpp  test_double.cpp  test_extent.cpp  test_octree.cpp  test_spoc.cpp  (+8 more)
app_tests/: test_spoc2las.cpp  test_transform.cpp
apps/: las2spoc.cpp  spoc2las.cpp  spoc_info.1.md  spoc_info.cpp  spoc_info_cmd.h  spoc_las2spoc.cpp  spoc_spoc2las.cpp  spoc_spoc2text.cpp  spoc_text2spoc.cpp  spoc_tile.1.md  spoc_tile.cpp  text2spoc.cpp
apps/color/: color.1.md  color.cpp  color.h  color_cmd.h
apps/compress/: compress.1.md  compress.cpp  compress.h  compress_cmd.h
apps/decompress/: decompress.1.md  decompress.cpp  decompress.h  decompress_cmd.h
apps/diff/: diff.1.md  diff.cpp  diff.h  diff_cmd.h
apps/filter/: filter.1.md  filter.cpp  filter.h  filter_cmd.h
apps/info/: info.1.md  info.cpp  info.h  info_cmd.h
apps/las2spoc/: las2spoc.1.md  las2spoc.cpp  las2spoc.h  las2spoc_cmd.h
apps/merge/: merge.1.md  merge.cpp  merge.h  merge_cmd.h
apps/spoc2las/: spoc2las.1.md  spoc2las.cpp  spoc2las.h  spoc2las_cmd.h
apps/spoc2text/: spoc2text.1.md  spoc2text.cpp  spoc2text.h  spoc2text_cmd.h
apps/srs/: srs.1.md  srs.cpp  srs.h  srs_cmd.h
apps/text2spoc/: text2spoc.1.md  text2spoc.cpp  text2spoc.h  text2spoc_cmd.h
apps/tile/: tile.1.md  tile.cpp  tile.h  tile_cmd.h
apps/tool/: tool.1.md  tool.cpp  tool.h  tool_cmd.h
apps/transform/: transform.1.md  transform.cpp  transform.h  transform_cmd.h
benchmarks/: benchmark_io.cpp  benchmark_spoc_file.cpp
examples/: CMakeLists.txt  Makefile  generate_infinite_points.cpp  noop.cpp  stream_averaging.cpp  stream_averaging_example.sh  transform_filter_example.sh
filters/: filter.h  noop.cpp  spoc_filter.h  spoc_noop_transform_filter.cpp  spoc_transform_filter.cpp
format_conversion/: Makefile  compare_one.sh  convert_laz_all.sh  convert_laz_one.sh  convert_spoc_all.sh  convert_spoc_one.sh
include/: affine.h  app_utils.h  asprs.h  benchmark_utils.h  cmd.h  compress.h  compression.h  contracts.h  diff.h  extent.h  file.h  header.h  info.h  io.h  json.h  las2spoc.h  merge.h  point.h  point_record.h  radius_search.h  spoc.h  spoc2las.h  subsampling.h  test_utils.h  tile.h  tool.h  transform.h  util.h  version.h  voxel.h  web_dataset.h
integration_tests/: test_las2spoc.sh  test_tile.sh
scripts/: compare_all.sh  compare_one.sh  convert_laz_all.sh  convert_spoc_one.sh
spoc/: affine.h  asprs.h  cmd.h  contracts.h  extent.h  file.h  header.h  io.h  json.h  point.h  point_record.h  radius_search.h  spoc.h  subsampling.h  test_utils.h  utils.h  version.h  voxel.h
spoc_conversion/: .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md
spoc_conversion/apps/las2spoc/: las2spoc.1.md  las2spoc.cpp  las2spoc.h  las2spoc_cmd.h
spoc_conversion/apps/spoc2las/: spoc2las.1.md  spoc2las.cpp
spoc_conversion/apps/spoc2text/: spoc2text.1.md  spoc2text.cpp  spoc2text_cmd.h
spoc_conversion/apps/text2spoc/: text2spoc.1.md  text2spoc.cpp  text2spoc.h  text2spoc_cmd.h
spoc_conversion/include/: spoc_conversion.h
spoc_conversion/laslib/LASlib/: CHANGES.txt  Makefile  README.txt
spoc_conversion/laslib/LASlib/example/: lasexample.cpp  lasexample_recover_returns_from_trajectory_in_extra_bytes.cpp  lasexample_simple_classification.cpp  lasexample_write_only_full_waveform.cpp
spoc_conversion/laslib/LASlib/lib/: .gitignore
spoc_conversion/laslib/LASlib/src/: CMakeLists.txt.bak
spoc_conversion/laslib/LASzip/: CHANGES.txt  README.txt
spoc_conversion/tests/app/: test_las2spoc.cpp  test_spoc2las.cpp  test_spoc2text.cpp  test_text2spoc.cpp
spoc_conversion/tests/integration/: test_las2spoc.sh  test_spoc2las.sh  test_spoc2text.sh  test_text2spoc.sh
spoc_conversion/tests/unit/: test_spoc_conversion.cpp
spoc_viewer/: CMakeLists.txt  Makefile  README.md  class_descriptions.txt  class_palette.txt  cmd.h  colors.h  generate_colorbar_reference.py  palette.h  spoc_viewer.1.md  spoc_viewer.cpp  version.h  vtk_interactor.h
spocpy/: .gitignore  Makefile  README.md  setup.py
spocpy/examples/: fileio.py  point_cloud_viewer.py  timings.py
spocpy/spocpy/: __init__.py  spocpy.cpp  spocpy.py
spocpy/tests/: package.py  unit.py
test_data/: convert_spoc_files.sh
test_data/eo/: romeo007.las  romeo007.spoc  romeo007_segmented_e0.spoc
test_data/lidar/: juarez50.las  juarez50.spoc  juarez50.zpoc  rome012.las  rome012.spoc
tests/: test_app_utils.cpp  test_cmd.cpp  test_compress.cpp  test_diff.cpp  test_diff.sh  test_extent.cpp  test_filter.sh  test_info.cpp  test_info.sh  test_json.cpp  test_las2spoc.cpp  test_las2spoc.sh  test_merge.cpp  test_merge.sh  test_spoc.cpp  test_spoc2las.cpp  test_spoc2las.sh  test_spoc2text.cpp  test_spoc2text.sh  test_srs.sh  test_text2spoc.cpp  test_text2spoc.sh  test_tile.cpp  test_tool.cpp  test_transform.cpp  test_transform.sh  test_transformer.sh  test_utils.h  test_voxel.cpp
tests/app/: test_color.cpp  test_diff.cpp  test_filter.cpp  test_info.cpp  test_las2spoc.cpp  test_merge.cpp  test_spoc2las.cpp  test_spoc2text.cpp  test_text2spoc.cpp  test_tile.cpp  test_tool.cpp  test_transform.cpp
tests/integration/: test_color.sh  test_diff.sh  test_filter.sh  test_info.sh  test_las2spoc.sh  test_merge.sh  test_spoc2text.sh  test_srs.sh  test_text2spoc.sh  test_tile.sh  test_tool.sh  test_transform.sh
tests/unit/: test_affine.cpp  test_app_utils.cpp  test_asprs.cpp  test_benchmark_utils.cpp  test_cmd.cpp  test_compress.cpp  test_contracts.cpp  test_extent.cpp  test_file.cpp  test_header.cpp  test_io.cpp  test_json.cpp  test_spoc.cpp  (+8 more)
transformers/: noop.cpp  transformer.h
unit_tests/: test_app_utils.cpp  test_extent.cpp
(+8 files in other folders)
